syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ApplicantResume{
	rpc ReadApplicantResume (ApplicantResumeIdRequest) returns (ApplicantResumePayload);
	rpc GetAllApplicantResume (google.protobuf.Empty) returns (AllApplicantResumePayload);
	rpc CreateApplicantResume (ApplicantResumePayload) returns (google.protobuf.Empty);
	rpc UpdateApplicantResume (ApplicantResumePayload) returns (google.protobuf.Empty);
	rpc DeleteApplicantResume (ApplicantResumePayload) returns (google.protobuf.Empty);
}

message ApplicantResumeIdRequest{
	string Id =1;
}

message ApplicantResumePayload {
	string Id = 1;
	string Applicant = 2;
	string Resume = 3;
	google.protobuf.Timestamp LastUpdated = 4;
	
}

message AllApplicantResumePayload {
	repeated ApplicantResumePayload ApplicantResumes = 1;
}